# graphlens-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile.cpu  README.md  docker-compose.cpu.yml  pyproject.toml  requirements-torch-cpu.txt  requirements-torch-cu126.txt  requirements.txt
docs/diagrams/: README.md
image/: testimage1.graph.json
output/: testimage1.harness_report.json
samples/: fan_in_collector.json
schemas/: graph.schema.json
scripts/: analyze_graph_json.py  analyze_image.py  check_torch_stack.py  download_florence.py  download_ollama_model.py  download_pixtral.py  download_qwen.py  smoke_test_pixtral_extraction.py  smoke_test_qwen_extraction.py
skills/afc_typology_mapping/: SKILL.md  rule_engine_contract.md  source_registry.schema.json  source_registry.yaml  source_registry_contract.md  typology_glossary.schema.json  typology_glossary.yaml  typology_glossary_contract.md  typology_rules.schema.json  typology_rules.yaml
skills/alert_investigation_boost/: SKILL.md  investigation_playbooks.schema.json  investigation_playbooks.yaml  investigation_playbooks_contract.md  sar_red_flags.schema.json  sar_red_flags.yaml  sar_red_flags_contract.md  scoring_policy.schema.json  scoring_policy.yaml  scoring_policy_contract.md
skills/graph_image_extraction/: SKILL.md  extraction_prompt.md  graph_image_extraction_contract.md  graph_schema.json  graph_schema_contract.schema.json
skills/narrative_generation/: SKILL.md  narrative_policy.schema.json  narrative_policy.yaml  narrative_policy_contract.md  narrative_template.md  prohibited_claims.schema.json  prohibited_claims.yaml  prohibited_claims_contract.md
tests/: test_amount_parser.py  test_api.py  test_extraction.py  test_graph_features.py  test_motif_detector.py  test_narrative.py  test_narrative_builder.py  test_pdf_report.py  test_phase1.py  test_rule_engine.py  test_skill_contracts.py  test_vlm_adapters.py
(+64 files in other folders)
