[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "afc-network-narrative"
version = "0.1.0"
description = "Local AFC network narrative system using visual models for graph extraction only"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi>=0.110,<1.0",
  "numpy==1.26.4",
  "pydantic>=2.6,<3.0",
  "jsonschema>=4,<5",
  "networkx>=3.2,<4",
  "pillow>=10,<12",
  "reportlab>=4,<5",
  "python-multipart>=0.0.9,<1.0",
  "PyYAML>=6.0,<7.0",
  "uvicorn[standard]>=0.27,<1.0",
  "huggingface_hub>=0.23",
  "accelerate",
  "einops>=0.7,<1.0",
  "timm>=1.0,<2.0",
  "qwen-vl-utils[decord]==0.0.8",
  "transformers @ git+https://github.com/huggingface/transformers",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "httpx>=0.27,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
